# test

./: Makefile  Makefile.am  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  eq_tucker.py  libtool
interface/: Makefile.am  TuckerDingens.pxd  TuckerDingens.pyx  __init__.py  cpython_TuckerDingens.cpp  cpython_TuckerDingens.hpp
interface/tests/: Makefile.am  test_sequential_TuckerDingens.py
python/: call_the_tucker_stuff.py
src/: Algebra.hpp  Makefile.am
